@@ -231,14 +231,15 @@ class panels_renderer_legacy {
       }
     }
 
+    ctools_include('cleanstring');
     // Pass long the css_id that is usually available.
     if (!empty($pane->css['css_id'])) {
-      $content->css_id = $pane->css['css_id'];
+      $content->css_id = ctools_cleanstring($pane->css['css_id']);
     }
 
     // Pass long the css_class that is usually available.
     if (!empty($pane->css['css_class'])) {
-      $content->css_class = $pane->css['css_class'];
+      $content->css_class = ctools_cleanstring($pane->css['css_class']);
     }
 
     return $content;
