@@ -23,6 +23,7 @@ Add two new Page Wizards to more easily create some of the most commonly used Pa
 #890086: Possible crash in flexible layout by not having CTools export.inc loaded.
 #899456 by yareckon: IPE customize button needs to be reset to "static" instead of "normal".
 #806874 by ximo: Allow panes to specify "render first" as well as "render last".
+#920266 by dereine: Typo in cache.inc caused wsods in rare circumstances.
 
 Panels 6.x-3.7 (2010-Jul-26)
 ==============
